base/flux-system/ingress-cloudflare.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloudflare-ingress
  namespace: flux-system
spec:
  ingressClassName: cloudflare
  rules:
  - host: flux.ankhmorpork.thaum.xyz
    http:
      paths:
      - backend:
          service:
            name: webhook-receiver
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - flux.ankhmorpork.thaum.xyz
    secretName: flux-tls
